# chorer

./: pyproject.toml
chorer/: __init__.py  __main__.py  main.py
chorer/commands/bare_web/: Node.gitignore  __init__.py  bare_web.py  vite.config.js.diff
chorer/commands/bare_web/template/: README.md
chorer/commands/bare_web/template/backend/: application.py
chorer/commands/bare_web/template/backend/src/: __init__.py
tests/: test_bare_web.py
